--- a/src/app/componentes/dietas/dietas.component.html
+++ b/src/app/componentes/dietas/dietas.component.html
@@ -1,1 +1,22 @@
-<p>dietas works!</p>
+<section class="col-sm-12 pt-4">
+    <div class="row" *ngIf="acceso == '1'">  
+        <div class="col-sm-12 d-flex justify-content-center">
+            <div class="col-md-4 pt-5">
+                <buscador-component (selected)="selectUsuario($event)" [config]="configBuscador">
+                </buscador-component>
+            </div>
+        </div>
+    </div>
+
+    <div class="row d-flex justify-content-center ">
+        <div class="col-sm-12 col-md-2 tarjeta row "  [routerLink]="['/dietas/crear',idUsuario]" *ngIf="(acceso !='1') || (acceso == '1' && idUsuario != null)">
+            <i class="fas fa-plus-square fa-4x"></i>
+            <h4 class="col-sm-12">Añadir dieta</h4>
+        </div>
+        <div class="col-sm-12 col-md-2 tarjeta row " *ngFor="let dieta of dietasUsuario"   [routerLink]="['/dietas/visualizar',dieta._id]">
+            <i class="fas fa-calendar-alt fa-4x"></i>
+            
+            <h4 class="col-sm-12">{{dieta.nombre}}</h4>
+        </div>
+    </div>
+</section>
