--- a/src/app/componentes/ejercicios/ejercicios.component.html
+++ b/src/app/componentes/ejercicios/ejercicios.component.html
@@ -32,7 +32,7 @@
             <h4 class="col-sm-12"> Abdomen</h4>
             <img src="/assets/imagenes/ejerciciosAbdomen.png" class="img-fluid p-4">
         </div>
-        <div class="col-sm-12 col-md-6 tarjeta row " [routerLink]="['/ejercicios/crear']" *ngIf="acceso == '1'">
+        <div class="col-sm-12 col-md-3 tarjeta row pb-5 " [routerLink]="['/ejercicios/crear']" *ngIf="acceso == '1'">
             <h4 class="col-sm-12">Añadir ejercicio</h4>
             <i class="fas fa-plus-square fa-4x"></i>
         </div>
