--- a/src/app/componentes/dietas/visualizar-dietas/visualizar-dietas.component.scss
+++ b/src/app/componentes/dietas/visualizar-dietas/visualizar-dietas.component.scss
@@ -19,6 +19,7 @@ th{
 .kcalTotales{
     background-color: red;
     padding: 0.5em;
+    font-size: 18px;
 }
 
 // Boton eliminar dieta
@@ -47,7 +48,9 @@ th{
     }
     .kcalTotales{
         margin-right: 15px;
+        font-size: 16px;
     }
+    
     
 }
 
