--- a/src/app/componentes/clases/clases.component.html
+++ b/src/app/componentes/clases/clases.component.html
@@ -6,7 +6,7 @@
             </app-util-calendario-cabecera>
         </div>
         <div class="col-md-10 dark-theme"  >
-            <mwl-calendar-month-view [viewDate]="viewDate" [events]="events" 
+            <mwl-calendar-month-view [viewDate]="viewDate" [events]="events"  [refresh]="refresh"
                 [excludeDays]="excludeDays" [activeDayIsOpen]="activeDayIsOpen" (dayClicked)="dayClicked($event.day)">
             </mwl-calendar-month-view>
         </div>
